# RayTracerDemo

./: CMakeLists.txt  Circle.cpp  Circle.h  Cone.cpp  Cone.h  Cylinder.cpp  Cylinder.h  Plane.cpp  Plane.h  README.md  RayTracer.cpp  SceneObject.cpp  SceneObject.h  Sphere.cpp  Sphere.h  TextureBMP.cpp  TextureBMP.h
.github/: copilot-instructions.md
